# htmd

./: .appveyor.yml  .gitignore  .gitmodules  .lgtm.yml  .travis.yml  .travis_conda_build_upload_meta.sh  .travis_conda_upload.sh  .travis_conda_upload_data.sh  .travis_conda_upload_meta.sh  COMPILING.md  COPYRIGHTS.txt  HTMD_LICENCE.txt  MANIFEST.in  Makefile  README.md  README.txt  SYNC_CONDA_WITH_OMNIA.sh  appveyor.yml  flake8-docstrings.cfg  jeiros_contribution.md  license_headers.py  makerelease.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  sync_acellera_conda_channel_deps.py  sync_conda_with_omnia.py  sync_conda_with_omnia.sh
.github/workflows/: docs.yml  publish.yml  pythonpublish.yml  test.yml  test_and_publish.yml
C/distance/: Makefile  build.sh  mindist_ext.c
C/occupancy/: Makefile  occupancy_ext.c
C/parameterize/: Makefile
C/tmalign/: Kabsch.h  Makefile  NW.h  TMalign.cpp  TMalign.h  basic_define.h  basic_fun.h  test.py
continuous-integration/: binstar-push.py  move-conda-package.py
continuous-integration/appveyor/: .appveyor.yml  binstar-push.py  compile_htmdlib.cmd  move-conda-package.py  rm_rf.py
continuous-integration/azure/: build_artifact_job.yml  pipelines.yml  test_job.yml
doc/: .gitignore  CHANGES-1.1.0.md  CodingStyle.md  Makefile  README  README.md  gethtmdtag.py  make.bat  render_jinja.py  versioning.md
docker/: Dockerfile  Makefile
htmd/: __init__.py  _version.py  config.py  decorators.py  dock.py  home.py  kinetics.py  kineticshmm.py  latest.py  lib.py  license.py  log.py  logging.ini  metricdata.py  metricdatagenerator.py  model.py  modelhmm.py  mutualinformation.py  numbautil.py  parallelprogress.py  pathplanning.py  pyemma.py  rotationmatrix.py  session.py  simlist.py  trajectorystorage.py  ui.py  units.py  userinterface.py  util.py  version.py  versionwarnings.py  vmd_wrapper  vmdgraphics.py  vmdviewer.py
htmdx/: cli.py  license.py
olddoc/: README.md  gethtmdtag.py  render_jinja.py
test_pmemdEngine/: EquilTest.py  ProdTest.py  test.py
tests/: 1BL8_A.cif  1R1J_A.cif  1U5U_A.cif  2B5I_A.cif  2KDC_A.cif  3PTB_A.cif  4TOT.cif  4TOT_A.cif  4TOT_E.cif  5VBL_A.cif  8QFZ_B.cif  8QU4_A.cif  MSM-test.ipynb  data  make_test.sh  run_inline_file_tests.py  run_inline_file_tests.sh  run_other_tests.sh  run_tests  test_adaptive.py  test_adaptivebandit.py  test_adaptivegoal.py  test_adaptiverun.py  test_amber_builder.py  test_builder.py  test_charmm.py  test_ionize.py  test_kinetics.py  test_membrane_builder.py  test_metric.py  test_metricdata.py  test_model.py  test_modrna_terminal.py  test_noncanonical.py  test_nonstandard_builder.py  test_openff_builder.py  test_openmm_builder.py  test_scaffolded_peptide_builder.py  test_simlist.py
tutorials/: .gitignore  Dialanine-Implicit-Analysis.ipynb  FFEvaluate.ipynb  MaxSubstructualAlignment.ipynb  MaxSubstructuralAlignment.ipynb  MembraneBuilder.ipynb  SequenceAlignment.ipynb  WrappingTutorial.ipynb  adaptive-bandit.ipynb  adaptive-sampling-basics.ipynb  adaptive-sampling-example.ipynb  adaptive-sampling.ipynb  atom-selections.ipynb  building-protein-membrane-molecular-system.ipynb  conformational-analysis-CXCL12.ipynb  cxcl12-conformational-analysis.ipynb  docking-simulation-generators.ipynb  getting-started-htmd.ipynb  getting-started-with-htmd-molecules.ipynb  getting-started-with-htmd.ipynb  htmd-molecules.ipynb  htmd-python-primer.ipyb  htmd-python-primer.ipynb  introd-atom-selections.ipynb  ligand-binding-analysis.ipynb  ligand-parameterization.ipynb  md-protocols.ipynb  mu-opioid-receptor-gpcr-equilibration.ipynb  playing-with-htmd-molecule.ipynb  projections.ipynb  protein-folding-analysis.ipynb  protein-preparation.ipynb  python-primer.ipynb  simplepython.tpl  system-building-basics.ipynb  system-building-mu-opioid.ipynb  system-building-protein-in-membrane.ipynb  system-building-protein-ligand.ipynb  system-building-protein-prepare.ipynb  system-building-protein-protein.ipynb  (+3 more)
(+35582 files in other folders)
