[project]
name = "acellera-htmd"
description = "High throughput molecular dynamics (HTMD)"
authors = [{ name = "Acellera", email = "info@acellera.com" }]
readme = "README.md"
requires-python = ">=3.9"
dynamic = ["version"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: POSIX :: Linux",
]
dependencies = []

[project.urls]
"Homepage" = "https://github.com/Acellera/htmd"
"Bug Tracker" = "https://github.com/Acellera/htmd/issues"

[project.scripts]
htmd_register = "htmd.license:htmd_register"

[tool.setuptools.packages.find]
where = [""]
include = ["htmd*"]
namespaces = false

[tool.setuptools_scm]

[build-system]
requires = ["setuptools", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"
