[project]
name = "htmd"
description = "High throughput molecular dynamics (HTMD)"
authors = [{ name = "Acellera", email = "info@acellera.com" }]
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["version"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: POSIX :: Linux",
]
dependencies = [
  "ambertools-unofficial>=24.8.0.post3; sys_platform != 'win32'",
  "deeptime>=0.4.5",
  "h5py>=3.15.1",
  "joblib>=1.5.3",
  "jobqueues>=1.0.13",
  "matplotlib>=3.10.8",
  "moleculekit>=1.11.1",
  "natsort>=8.4.0",
  "networkx>=3.4.2",
  "numpy>=2.2.6",
  "pandas>=2.3.3",
  "parmed>=4.3.1",
  "pint>=0.24.4",
  "protocolinterface>=0.4.7",
  "scikit-learn>=1.7.2",
  "scipy>=1.15.3",
  "tqdm>=4.67.3",
]

[project.optional-dependencies]
interactive = [
  "ipython",
  "jupyter_console",
  "notebook",
  "ipywidgets>=8.1.8",
  "nglview>=4.0.1",
]
pymol = ["pymol-open-source"]

[project.urls]
"Homepage" = "https://github.com/Acellera/htmd"
"Bug Tracker" = "https://github.com/Acellera/htmd/issues"

[project.scripts]
htmd_register = "htmd.license:htmd_register"

[tool.setuptools.packages.find]
where = [""]
include = ["htmd*"]
namespaces = false

[tool.setuptools_scm]

[build-system]
requires = ["setuptools", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = ["flake8>=7.3.0", "pytest>=9.0.2"]
